Update Capstone Project -nb.ipynb

--- a/Capstone Project -nb.ipynb
+++ b/Capstone Project -nb.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This the a notebook for Capstone Project!"
+    "### This is a notebook for Capstone Project!"
    ]
   },
   {
